Get a TV series list

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,6 @@
-<p>
-  search works!
-</p>
+<div class="control has-addons">
+  <input type="text" class="input">
+  <button class="button">find</button>
+</div>
+
+{{ shows | json }}
